--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
         "other": "on",
         "comments": true,
         "strings": "off"
-    }
+    },
+    "zls.path": "/usr/local/zls/bin/zls"
 }
